<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SinglePhotoView">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_48dp"
        app:showAsAction="always"
        android:title="@string/edit"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_48dp"
        app:showAsAction="always"
        android:title="@string/share"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_48dp"
        app:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/action_setBackground"
        app:showAsAction="never"
        android:title="@string/set_background"/>

</menu>