<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:background="@android:color/background_light"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">
        <Button
            android:id="@+id/btn_effect_none"
            android:drawableTop="@drawable/ic_effect_none"
            android:text="@string/effect_none"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="5dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/btn_effect_bw"
            android:drawableTop="@drawable/ic_effect_bw"
            android:text="@string/effect_bw"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="5dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/btn_effect_sepia"
            android:drawableTop="@drawable/ic_effect_sepia"
            android:text="@string/effect_sepia"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="5dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/btn_effect_invert"
            android:drawableTop="@drawable/ic_effect_invert"
            android:text="@string/effect_invert"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="5dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/btn_effect_polaroid"
            android:drawableTop="@drawable/ic_effect_polaroid"
            android:text="@string/effect_polaroid"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="5dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
    </LinearLayout>
</RelativeLayout>