<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="80dp"
    android:orientation="horizontal"
    android:background="@android:color/background_light"
    android:animateLayoutChanges="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/btn_rotateLeft"
            android:drawableTop="@drawable/ic_rotate_left"
            android:text="@string/rotate_left"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="8dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/btn_rotateRight"
            android:drawableTop="@drawable/ic_rotate_right"
            android:text="@string/rotate_right"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="8dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/btn_horizontalFlip"
            android:drawableTop="@drawable/ic_flip_horizontal"
            android:text="@string/flip_horizontally"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="8dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
        <Button
            android:id="@+id/btn_verticalFlip"
            android:drawableTop="@drawable/ic_flip_vertical"
            android:text="@string/flip_vertically"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:textColor="@color/dark_gray"
            android:padding="8dp"
            android:gravity="center"
            android:background="?android:selectableItemBackgroundBorderless"/>
    </LinearLayout>
</RelativeLayout>